src/main/asciidoc/1.11.0/built-in-variables.adoc
== Built-In Variables


=== Default Built-In Variables

[cols="1,4,2,1"]
|===
|Name| Description| Example | Output

m|.now
| The `.now` built-in variable of type `TemplateZoneDateTime`  provides the current timestamp.
m| ${.now?date}
| 2025-07-19

m|.locale
|The `.locale` built-in variable of type `TemplateLocale`  provides the current locale.
m|${.locale?country_name}
|Germany

m|.country
|The `.country` built-in variable of type `TemplateString`  provides the current locales country code.
m|${.country}
|DE

m|.language
|The `.language` built-in variable of type `TemplateString`  provides the current locales language code.
m|${.language}
|de

m|.version
|The `.version` built-in variable of type `TemplateVersion`  provides the current _FreshMarker_ version.
m|${version?minor}
|11

|===

=== Random Built-In Variable

[NOTE]
====
The  `.random` built-in variable is included via an additional artefact.

[source,xml,subs="attributes+"]
----
<dependency>
  <groupId>de.schegge</groupId>
  <artifactId>freshmarker-random</artifactId>
  <version>{plugin-random-version}</version>
</dependency>
----
====

The `.random` built-in variable of type `TemplateRandom` can be used to generate random value via several built-ins.

=== Hemisphere Built-In Variable

[NOTE]
====
The  `.hemisphere` built-in variable is included via an additional artifact.

[source,xml,subs="attributes+"]
----
<dependency>
  <groupId>de.schegge</groupId>
  <artifactId>freshmarker-astro</artifactId>
  <version>{plugin-astro-version}</version>
</dependency>
----
====

The `.hemisphere` built-in variable of type `TemplateEnum` can be used to distinguish between the Northern Hemisphere (NORTH) and the Southern Hemisphere (SOUTH).
